# dune-moes

./: CMakeLists.txt  README.md
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune-moes/: config.h.cmake  dune-moes.pc.in  dune.module
dune-moes/dune/moes/: Utils.hh  convergenceTests.hh  flopUtils.hh
dune-moes/dune/moes/test/: CMakeLists.txt  kerntest.cc  largestEigenvalues.cc  moesvsarpackflops.cc  neumann_problem_A_1_3.txt
dune-moes/src/: dune-moes.cc
dune/moes/: CMakeLists.txt  MatrixMult.hh  Utils.hh  arpack_geneo_wrapper.hh  convergenceTests.hh  dotproduct.hh  flopUtils.hh  gramSchmidt.hh  inversePowerIteration.hh  moes.hh  naive.hh  qrcol.hh  qrdecomposition.hh  qrvec.hh  umfpackMoes.hh
dune/moes/test/: CMakeLists.txt  GStest.cc  kerntest.cc  largestEigenvalues.cc  matmultest.cc  minimalExample.cc  moesvsarpackflops.cc  naivetest.cc  neumann_problem_B_1_3.txt  qrcoltest.cc  qrtest.cc  qrvectest.cc  test.cc  timing.hh  umfTest.cc
src/: CMakeLists.txt
